added media queries

--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -68,3 +68,16 @@
 .description b, .description p {
   font-size: 22px;
 }
+
+@media (max-width: 596px) {
+  /* .cartItem {
+    grid-template-columns: 1fr;
+  } */
+
+  .cartItem {
+    width: 250px;
+    height: 280px;
+    margin: 20px;
+    padding: 90px;
+  }
+}
