--- a/src/pages/shop/shop.css
+++ b/src/pages/shop/shop.css
@@ -52,7 +52,28 @@
   cursor: pointer;
 }
 
-/* .shop {
-  border: 2px black solid;
-  margin: 5px;
-} */
+/* Responsiiviset tyylit */
+@media (max-width: 1100px) {
+  .products {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .product {
+    width: 250px;
+    height: 300px;
+    margin: 30px;
+  }
+}
+
+@media (max-width: 576px) {
+  .products {
+    grid-template-columns: 1fr;
+  }
+
+  .product {
+    width: 200px;
+    height: 250px;
+    margin: 30px;
+    padding: 40px;
+  }
+}
